# fjarsyn

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
.zed/: debug.json
bifrost/: Cargo.toml
bifrost/src/: signaling_server.rs
examples/: benchmark_wgc.rs
shared/: Cargo.toml
shared/src/: lib.rs
signaling_server/: Cargo.toml
signaling_server/src/: main.rs  signaling_server.rs
src/: config.rs  lib.rs  main.rs
src/capture_providers/: capture_provider.rs  mod.rs
src/capture_providers/shared/: capture_framerate.rs  frame.rs  mod.rs  pixel_format.rs  rect.rs  vector2.rs
src/capture_providers/windows/: builder.rs  capture.rs  capture_provider.rs  capture_stream.rs  d3d11_utils.rs  error.rs  mod.rs  wgc_capture_provider.rs  wgc_capture_provider_builder.rs
src/media/: mod.rs
src/media/ffmpeg/: ffmpeg_decoder.rs  ffmpeg_encoder.rs  ffmpeg_transcode_type.rs  mod.rs
src/media/h264/: h264_decoder.rs  h264_encoder.rs  mod.rs
src/media/h264_cpu/: h264_cpu_decoder.rs  h264_cpu_encoder.rs  mod.rs
src/networking/: mod.rs  signaling.rs  signaling_error.rs
src/networking/webrtc/: mod.rs  webrtc.rs  webrtc_error.rs
src/ui/: app.rs  frame_receiver_ref.rs  frame_viewer.rs  message.rs  mod.rs  notification.rs  notification_provider.rs  state.rs
src/ui/screens/: call.rs  capture.rs  home.rs  mod.rs  onboarding.rs  settings.rs
src/utils/: bitmap_utils.rs  buffer_arena.rs  buffer_pool.rs  errable_option.rs  frame.rs  image_utils.rs  mod.rs  pixel_format.rs  rect.rs  unsafe_send_wrapper.rs
