[package]
name = "fjarsyn"
description = "A screen sharing application."
version = "0.1.0"
edition = "2024"

[workspace]
members = ["bifrost", "shared"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iced = { version = "0.14.0", features = [
    "tokio",
    "image",
    "canvas",
    "advanced",
] }
iced_winit = { version = "0.14.0" }
iced_core = { version = "0.14.0" }
iced_debug = { version = "0.14.0" }
iced_devtools = { version = "0.14.0" }
thiserror = "2.0.17"
once_cell = "1.19.0"
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Capture",
    "Foundation",
    "System",
] }
windows-core = "0.62.2"
bytes = "1.11.0"
windows-future = "0.3.2"
webrtc = "0.14"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
fjarsyn-shared = { path = "./shared" }
serde_json = { workspace = true }
ffmpeg-next = { version = "8.0.0", features = ["static"] }
directories = "6.0.0"
serde = { workspace = true, features = ["derive"] }
