[package]
name = "loki-signaling-server"
description = "The signaling server for the Loki screen sharing application."
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8.7", features = ["ws"] }
uuid = { version = "1.19.0", features = ["v4"] }
uuid-simd = "0.8.0"
anyhow = "1.0.100"
loki-shared = { path = "../shared" }
